# zelezobeton

./: .gitignore  LICENSE  README.md  bump_commit_tag.py  data.py  generate_key.py  manage.py  page.py  pyproject.toml  pytest.ini  styles.py  utils.py
engine/: __init__.py  classes.py  serializer.py
game/: __init__.py  callbacks.py  classes.py  data.py  labels.py  styles.py  utils.py
games/: __init__.py  default.py  default.yaml
tests/: blackbox_test.py  conftest.py  test_data.py  test_game_logic.py  test_labels.py  test_schema.py  test_serialization.py  test_web_ui.py
tests/schemas/: obj_schema.json  room_schema.json
textgame/: asgi.py  settings.py  urls.py  wsgi.py
webapp/: __init__.py  czech.py  urls.py  views.py
webapp/static/: game-styles.css
webapp/static/webapp/: game-styles.css
webapp/templates/: action_dropdown.html  base.html  chevron-down_icon.html  flask-empty-outline_icon.html  flask-outline_icon.html  footer.html  go_dropdown.html  home.html  home_icon.html  main.html  select_object.html
webapp/templatetags/: webapp_extras.py
