[tool.poetry]
name = "zelezobeton"
version = "0.3.1"
description = "Textová adventura."
license = "MIT"
authors = ["Michal Porteš <michalportes1@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/underground-lab/zelezobeton"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
selenium = "^4.5.0"
jsonschema = "^4.16.0"
handpick = "^0.11.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
